Add Processor Command And Service Auth
